work up until break

--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -23,7 +23,7 @@
           </a>
         </td>
         <td>
-          <a href="/actor/<%= character.actor_id %>">
+          <a href="/actors/<%= character.actor_id %>">
             <%= character.actor.name %>
           </a>
         </td>
