--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,28 @@
 <div class="page-header">
   <h3>Movie #<%= @movie.id %></h3>
+  <form action="/create_bookmark" method="post">
+    <!-- Hidden input for authenticity token to protect from forgery -->
+    <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+    <!-- Label and input for user_id -->
+
+    <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
+
+
+    <!-- Label and input for movie_id -->
+    <input type="hidden" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @movie.id %>">
+
+    <button class="btn btn-success">
+      Bookmark Movie
+    </button>
+
+  </form>
 </div>
 
 <div class="row">
   <div class="col-md-12">
     <dl class="dl-horizontal">
+
       <dt>Title</dt>
       <dd><%= @movie.title %></dd>
 
