--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,13 @@
           <li><a href="/movies">Movies</a></li>
           <li><a href="/characters">Characters</a></li>
           <li><a href="/actors">Actors</a></li>
+          <li><a href="/bookmarks">Bookmarks</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user != nil %>
-          <li><a href="/users/edit">Edit Profile (<%= current_user.email %>)</a></li>
+          <li><a href="/users/edit">Edit Profile</a></li>
           <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
           <% else %>
           <li><a href="/users/sign_up">Sign Up</a></li>
